Update lists at 20250408-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,7 +149,6 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.55;
 allow 144.172.118.73;
-allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 146.70.146.26;
@@ -1340,6 +1339,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1349,6 +1349,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1773,7 +1774,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
-allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1846,6 +1846,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1883,7 +1884,6 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
 allow 62.133.45.2;
-allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
@@ -1903,7 +1903,6 @@ allow 74.82.47.194;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 78.159.131.96;
 allow 79.124.60.174;
 allow 79.127.129.160;
 allow 80.241.60.207;
@@ -1924,6 +1923,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
