--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -245,7 +245,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.12.187;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -685,10 +684,15 @@ allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.82;
+allow 195.47.238.83;
 allow 195.47.238.84;
+allow 195.47.238.86;
 allow 195.47.238.87;
+allow 195.47.238.88;
+allow 195.47.238.89;
 allow 195.47.238.90;
 allow 195.47.238.91;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -1562,11 +1566,16 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
@@ -1705,7 +1714,6 @@ allow 3.110.92.168;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1716,6 +1724,7 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
