--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -644,11 +644,16 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
