--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1276,7 +1276,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
-set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:4780:c:b915::1;
@@ -1617,6 +1616,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:13::67bc;
+set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc0:0:8::a84e;
 set_real_ip_from 2a0e:bfc0:0:d::d927;
@@ -1656,6 +1656,54 @@ set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
+set_real_ip_from 2a10:1fc0:10::19eb:717b;
+set_real_ip_from 2a10:1fc0:10::28fc:90d4;
+set_real_ip_from 2a10:1fc0:10::2a17:5b54;
+set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
+set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3903:457;
+set_real_ip_from 2a10:1fc0:10::3919:de17;
+set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
+set_real_ip_from 2a10:1fc0:10::3a90:8c02;
+set_real_ip_from 2a10:1fc0:10::3dc5:e694;
+set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
+set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
+set_real_ip_from 2a10:1fc0:10::40d8:83c;
+set_real_ip_from 2a10:1fc0:10::42d2:f78b;
+set_real_ip_from 2a10:1fc0:10::5138:4dfa;
+set_real_ip_from 2a10:1fc0:10::5719:261d;
+set_real_ip_from 2a10:1fc0:10::61d9:7617;
+set_real_ip_from 2a10:1fc0:10::61e2:c84d;
+set_real_ip_from 2a10:1fc0:10::627f:3c31;
+set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
+set_real_ip_from 2a10:1fc0:10::6c2e:469a;
+set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
+set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::792f:38b4;
+set_real_ip_from 2a10:1fc0:10::895d:abf9;
+set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8b78:d42e;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
+set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
+set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
+set_real_ip_from 2a10:1fc0:10::9e08:e765;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
+set_real_ip_from 2a10:1fc0:10::a458:8b37;
+set_real_ip_from 2a10:1fc0:10::a63c:724c;
+set_real_ip_from 2a10:1fc0:10::b571:1205;
+set_real_ip_from 2a10:1fc0:10::bf3f:d195;
+set_real_ip_from 2a10:1fc0:10::c129:61a1;
+set_real_ip_from 2a10:1fc0:10::c385:c7fa;
+set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
+set_real_ip_from 2a10:1fc0:10::d5a6:a292;
+set_real_ip_from 2a10:1fc0:10::d5d0:db30;
+set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
+set_real_ip_from 2a10:1fc0:10::dbe0:6173;
+set_real_ip_from 2a10:1fc0:10::dbe9:7852;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
+set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
+set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -1817,6 +1865,7 @@ set_real_ip_from 45.9.168.113;
 set_real_ip_from 45.9.168.22;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
+set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.14;
 set_real_ip_from 45.95.169.230;
@@ -1827,6 +1876,7 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 47.254.142.180;
@@ -1928,6 +1978,30 @@ set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.183.128;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.110;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.114;
+set_real_ip_from 85.239.55.123;
+set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.239.55.168;
+set_real_ip_from 85.239.55.173;
+set_real_ip_from 85.239.55.174;
+set_real_ip_from 85.239.55.184;
+set_real_ip_from 85.239.55.189;
+set_real_ip_from 85.239.55.192;
+set_real_ip_from 85.239.55.201;
+set_real_ip_from 85.239.55.228;
+set_real_ip_from 85.239.55.230;
+set_real_ip_from 85.239.55.239;
+set_real_ip_from 85.239.55.24;
+set_real_ip_from 85.239.55.249;
+set_real_ip_from 85.239.55.25;
+set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.37;
+set_real_ip_from 85.239.55.51;
+set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
@@ -1946,7 +2020,6 @@ set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.221.217.206;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.32.41.150;
 set_real_ip_from 89.36.231.128;
@@ -1967,6 +2040,30 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
+set_real_ip_from 91.227.77.107;
+set_real_ip_from 91.227.77.108;
+set_real_ip_from 91.227.77.11;
+set_real_ip_from 91.227.77.125;
+set_real_ip_from 91.227.77.139;
+set_real_ip_from 91.227.77.158;
+set_real_ip_from 91.227.77.160;
+set_real_ip_from 91.227.77.181;
+set_real_ip_from 91.227.77.193;
+set_real_ip_from 91.227.77.200;
+set_real_ip_from 91.227.77.208;
+set_real_ip_from 91.227.77.209;
+set_real_ip_from 91.227.77.226;
+set_real_ip_from 91.227.77.229;
+set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.25;
+set_real_ip_from 91.227.77.31;
+set_real_ip_from 91.227.77.36;
+set_real_ip_from 91.227.77.44;
+set_real_ip_from 91.227.77.48;
+set_real_ip_from 91.227.77.51;
+set_real_ip_from 91.227.77.54;
+set_real_ip_from 91.227.77.62;
+set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
