--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -119,7 +119,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
-set_real_ip_from 114.164.107.167;
+set_real_ip_from 114.158.243.240;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
@@ -216,6 +216,7 @@ set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.245.251.232;
 set_real_ip_from 172.245.33.159;
 set_real_ip_from 172.81.131.110;
+set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
@@ -1042,7 +1043,6 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
@@ -1725,6 +1725,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:113;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
+set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
@@ -1789,6 +1790,7 @@ set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
+set_real_ip_from 45.138.16.231;
 set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
@@ -1943,7 +1945,6 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.18.215.82;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
