--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,7 +134,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 13.126.29.181;
-allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -1043,6 +1042,7 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1763,6 +1763,7 @@ allow 3.110.92.168;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1773,7 +1774,6 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1945,6 +1945,7 @@ allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.18.215.82;
 allow 72.211.49.235;
 allow 72.235.129.116;
