--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1337,6 +1337,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1896,6 +1897,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
