--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,6 +127,7 @@ allow 121.78.28.166;
 allow 123.253.35.32;
 allow 123.58.200.119;
 allow 125.212.241.131;
+allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -237,8 +238,6 @@ allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.246;
-allow 178.20.55.16;
-allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -1250,8 +1249,6 @@ allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
-allow 2a00:1b88:4::2;
-allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
@@ -1334,7 +1331,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1581,6 +1577,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1780,6 +1777,7 @@ allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
 allow 45.137.99.216;
+allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1891,7 +1889,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1949,7 +1946,6 @@ allow 74.82.47.194;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.124.60.174;
 allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
