Update lists at 20250410-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -656,6 +656,7 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
+allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
@@ -1639,6 +1640,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
+allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
