--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -656,6 +656,7 @@ deny 193.218.118.188;
 deny 193.218.118.56;
 deny 193.218.118.72;
 deny 193.218.118.89;
+deny 193.218.118.94;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.161;
@@ -1639,6 +1640,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
+deny 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
