Update lists at 20250411-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -80,7 +80,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -636,10 +635,8 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
-allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
-allow 193.26.115.161;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
@@ -718,7 +715,6 @@ allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
-allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -1065,7 +1061,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1304,6 +1299,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1600,7 +1596,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
-allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1655,7 +1650,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:9:1:193:26:115:161;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
@@ -1772,7 +1766,6 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.23.109.25;
 allow 46.232.251.191;
-allow 46.234.47.105;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 47.254.142.180;
@@ -1789,6 +1782,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1848,6 +1842,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
+allow 79.100.235.29;
 allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1898,7 +1893,6 @@ allow 89.36.231.128;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
-allow 91.139.160.150;
 allow 91.202.5.104;
 allow 91.202.5.155;
 allow 91.203.144.194;
