--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -16,7 +16,6 @@ deny 2001:41d0:701:1100::912e;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
-deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
@@ -169,7 +168,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -407,6 +405,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -703,7 +702,6 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
-deny 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -758,7 +756,6 @@ deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:205;
 deny 2a12:a800:2:1:45:80:158:23;
 deny 2a12:a800:2:1:45:80:158:27;
-deny 2a12:a800:9:1:193:26:115:161;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:3::479d;
 deny 2c0f:6c0:0:4::95ea;
