--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -168,6 +168,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -702,6 +703,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
+allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
