--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -38,7 +38,6 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
-allow 107.172.31.218;
 allow 107.172.75.153;
 allow 107.172.76.141;
 allow 107.173.143.32;
@@ -636,7 +635,6 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
-allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.43;
@@ -717,6 +715,7 @@ allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -933,7 +932,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1599,7 +1597,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
-allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1608,6 +1605,7 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
+allow 2a10:1fc0:10::3a90:8c02;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1770,6 +1768,7 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.23.109.25;
 allow 46.232.251.191;
+allow 46.234.47.105;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 47.254.142.180;
@@ -1888,7 +1887,6 @@ allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.147.108.90;
 allow 89.147.110.118;
-allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
@@ -1910,6 +1908,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.227.77.11;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
