--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -165,10 +165,6 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
 allow 156.229.226.6;
-allow 156.229.232.104;
-allow 156.229.232.108;
-allow 156.229.232.115;
-allow 156.229.232.98;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
@@ -1021,7 +1017,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1322,11 +1317,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1582,7 +1573,6 @@ allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
 allow 2a0e:bfc0:0:f::e538;
-allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
@@ -1643,6 +1633,7 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
+allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -1707,6 +1698,7 @@ allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
+allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
 allow 45.139.50.202;
@@ -1774,7 +1766,6 @@ allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.156.100;
 allow 45.9.156.101;
-allow 45.9.156.13;
 allow 45.9.168.108;
 allow 45.9.168.113;
 allow 45.9.168.22;
@@ -1859,7 +1850,6 @@ allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.18.215.82;
 allow 72.211.49.235;
 allow 72.235.129.116;
