--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -165,10 +165,6 @@ deny 154.16.116.61;
 deny 154.26.159.157;
 deny 154.41.95.1;
 deny 156.229.226.6;
-deny 156.229.232.104;
-deny 156.229.232.108;
-deny 156.229.232.115;
-deny 156.229.232.98;
 deny 158.220.123.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
@@ -1021,7 +1017,6 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1322,11 +1317,7 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
-deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -1582,7 +1573,6 @@ deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
 deny 2a0e:bfc0:0:f::e538;
-deny 2a0e:bfc7:0:2::46e2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
@@ -1643,6 +1633,7 @@ deny 2a12:a800:2:1:45:138:16:239;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
+deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
@@ -1707,6 +1698,7 @@ deny 45.138.16.239;
 deny 45.138.16.240;
 deny 45.138.16.248;
 deny 45.138.16.42;
+deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.138.87.142;
 deny 45.139.50.202;
@@ -1774,7 +1766,6 @@ deny 45.84.107.97;
 deny 45.9.148.50;
 deny 45.9.156.100;
 deny 45.9.156.101;
-deny 45.9.156.13;
 deny 45.9.168.108;
 deny 45.9.168.113;
 deny 45.9.168.22;
@@ -1859,7 +1850,6 @@ deny 66.78.40.182;
 deny 66.78.40.73;
 deny 67.219.109.141;
 deny 71.19.144.106;
-deny 72.14.179.10;
 deny 72.18.215.82;
 deny 72.211.49.235;
 deny 72.235.129.116;
