--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -232,6 +232,8 @@ set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
+set_real_ip_from 178.20.55.16;
+set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
@@ -639,6 +641,7 @@ set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.94;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
+set_real_ip_from 193.26.115.161;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
@@ -713,6 +716,7 @@ set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:601:1100::6524;
+set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::912e;
 set_real_ip_from 2001:41d0:a:5c0::1;
@@ -1226,6 +1230,8 @@ set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
+set_real_ip_from 2a00:1b88:4::2;
+set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
@@ -1659,6 +1665,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:205;
 set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
+set_real_ip_from 2a12:a800:9:1:193:26:115:161;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 2c0f:6c0:0:4::95ea;
@@ -1728,6 +1735,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.152.10.22;
 set_real_ip_from 45.157.11.6;
+set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1831,6 +1839,7 @@ set_real_ip_from 54.38.33.53;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 57.128.220.107;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
