--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -232,6 +232,8 @@ allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.246;
+allow 178.20.55.16;
+allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -639,6 +641,7 @@ allow 193.218.118.89;
 allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
+allow 193.26.115.161;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
@@ -713,6 +716,7 @@ allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
@@ -1226,6 +1230,8 @@ allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:1b88:4::2;
+allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
@@ -1659,6 +1665,7 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
+allow 2a12:a800:9:1:193:26:115:161;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
@@ -1728,6 +1735,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.152.10.22;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1831,6 +1839,7 @@ allow 54.38.33.53;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 57.128.220.107;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.63.146;
