--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,7 +10,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
 allow 103.163.218.11;
-allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -168,7 +167,6 @@ allow 156.229.226.6;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
-allow 161.129.68.162;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -1013,7 +1011,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1355,6 +1352,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:f4c0:16c:10::1;
@@ -1708,6 +1706,7 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
+allow 45.139.50.202;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
