Update lists at 20250413-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -170,6 +170,7 @@ deny 156.229.226.6;
 deny 158.220.123.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
+deny 161.129.68.162;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
@@ -276,6 +277,7 @@ deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.112.146.168;
 deny 185.113.128.30;
+deny 185.113.8.186;
 deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.129.61.1;
@@ -935,6 +937,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.125.213;
 deny 205.185.127.231;
+deny 207.32.218.41;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.34.15;
@@ -1355,6 +1358,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1578,7 +1582,6 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
-deny 2a0e:bfc0:0:f::e538;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
@@ -1710,6 +1713,7 @@ deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.138.87.142;
 deny 45.139.50.202;
+deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
@@ -1784,7 +1788,6 @@ deny 45.95.169.109;
 deny 45.95.169.130;
 deny 45.95.169.14;
 deny 45.95.169.230;
-deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.23.109.25;
@@ -1943,6 +1946,7 @@ deny 92.246.84.133;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
+deny 93.88.74.193;
 deny 93.95.227.37;
 deny 93.95.228.125;
 deny 93.95.228.205;
