Update lists at 20250414-0001

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -725,6 +725,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc1::359;
+allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
