Update lists at 20250414-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -233,7 +233,6 @@ deny 176.65.149.96;
 deny 176.97.114.202;
 deny 177.149.134.139;
 deny 178.162.175.5;
-deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -647,7 +646,6 @@ deny 193.218.118.188;
 deny 193.218.118.56;
 deny 193.218.118.72;
 deny 193.218.118.89;
-deny 193.218.118.94;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.161;
@@ -1026,6 +1024,7 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
+deny 2407:3640:2255:3978::1;
 deny 24.240.72.170;
 deny 2.56.10.36;
 deny 2.58.56.220;
@@ -1596,6 +1595,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
+deny 2a0e:bfc7:0:2::46e2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
@@ -1620,7 +1620,6 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
-deny 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1690,7 +1689,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1701,6 +1699,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1793,6 +1792,7 @@ deny 45.84.107.97;
 deny 45.9.148.50;
 deny 45.9.156.100;
 deny 45.9.156.101;
+deny 45.9.156.13;
 deny 45.9.168.108;
 deny 45.9.168.113;
 deny 45.9.168.22;
@@ -1864,6 +1864,7 @@ deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
 deny 62.182.84.146;
+deny 62.72.44.160;
 deny 64.190.76.10;
 deny 64.190.76.11;
 deny 64.190.76.12;
