--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -233,7 +233,6 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.149.134.139;
 allow 178.162.175.5;
-allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -647,7 +646,6 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
-allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
@@ -1026,6 +1024,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
+allow 2407:3640:2255:3978::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1596,6 +1595,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
+allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
@@ -1620,7 +1620,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
-allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1690,7 +1689,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1701,6 +1699,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1793,6 +1792,7 @@ allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.156.100;
 allow 45.9.156.101;
+allow 45.9.156.13;
 allow 45.9.168.108;
 allow 45.9.168.113;
 allow 45.9.168.22;
@@ -1864,6 +1864,7 @@ allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
+allow 62.72.44.160;
 allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
