--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,6 +122,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
+allow 2407:3640:2255:3978::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -686,6 +687,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
+allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
@@ -710,7 +712,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
-allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
