Update lists at 20250414-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -219,6 +219,7 @@ deny 172.81.135.157;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -1376,6 +1377,7 @@ deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1714,6 +1716,7 @@ deny 45.137.99.10;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
+deny 45.138.16.152;
 deny 45.138.16.178;
 deny 45.138.16.222;
 deny 45.138.16.230;
@@ -1829,6 +1832,7 @@ deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
+deny 5.255.110.29;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.58;
@@ -1913,6 +1917,7 @@ deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
+deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
 deny 85.239.41.130;
