--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -219,6 +219,7 @@ allow 172.81.135.157;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -1376,6 +1377,7 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1714,6 +1716,7 @@ allow 45.137.99.10;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
+allow 45.138.16.152;
 allow 45.138.16.178;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1829,6 +1832,7 @@ allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.110.29;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
@@ -1913,6 +1917,7 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
+allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
 allow 85.239.41.130;
