--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -468,6 +468,7 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
