--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -219,6 +219,7 @@ set_real_ip_from 172.81.135.157;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
@@ -934,6 +935,7 @@ set_real_ip_from 45.137.99.10;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.152;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1049,6 +1051,7 @@ set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
+set_real_ip_from 5.255.110.29;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
@@ -1133,6 +1136,7 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
+set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.183.128;
 set_real_ip_from 85.239.41.130;
