Update lists at 20250414-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -302,7 +302,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.43;
 allow 185.130.47.58;
-allow 185.132.53.12;
 allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
@@ -702,7 +701,6 @@ allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
-allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.189.27.123;
 allow 199.195.249.214;
@@ -1241,6 +1239,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1324,7 +1323,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1827,7 +1825,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1930,6 +1927,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
