Update lists at 20250414-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 13.126.29.181;
+allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -287,6 +288,7 @@ allow 185.113.128.30;
 allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.115.146;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -340,7 +342,18 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
+allow 185.220.101.100;
+allow 185.220.101.101;
+allow 185.220.101.102;
+allow 185.220.101.103;
+allow 185.220.101.104;
+allow 185.220.101.105;
+allow 185.220.101.106;
+allow 185.220.101.107;
+allow 185.220.101.108;
+allow 185.220.101.109;
 allow 185.220.101.11;
+allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -486,6 +499,10 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.96;
+allow 185.220.101.97;
+allow 185.220.101.98;
+allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -545,7 +562,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -649,11 +665,11 @@ allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
+allow 193.26.115.212;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.41.226.117;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1302,7 +1318,6 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1371,7 +1386,6 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1534,6 +1548,21 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1594,7 +1623,6 @@ allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
-allow 2a0e:bfc0:0:e::7dc2;
 allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
@@ -1683,6 +1711,7 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:9:1:193:26:115:161;
+allow 2a12:a800:9:1:193:26:115:212;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
@@ -1727,7 +1756,6 @@ allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
 allow 45.139.50.202;
-allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1795,7 +1823,6 @@ allow 45.9.156.100;
 allow 45.9.156.101;
 allow 45.9.156.13;
 allow 45.9.168.108;
-allow 45.9.168.113;
 allow 45.9.168.22;
 allow 45.94.31.68;
 allow 45.95.169.104;
@@ -1892,7 +1919,6 @@ allow 78.142.18.219;
 allow 78.159.131.96;
 allow 78.47.174.176;
 allow 79.100.235.29;
-allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
