Update lists at 20250415-0601

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1388,6 +1388,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1717,7 +1718,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1728,6 +1728,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1755,6 +1756,7 @@ deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.138.87.142;
 deny 45.139.50.202;
+deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
@@ -1886,7 +1888,6 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.220.107;
-deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
