--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1388,6 +1388,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1717,7 +1718,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1728,6 +1728,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1755,6 +1756,7 @@ allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
 allow 45.139.50.202;
+allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1886,7 +1888,6 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.220.107;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
