--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -466,6 +466,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
