Update lists at 20250416-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -62,7 +62,6 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
-allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -675,7 +674,6 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -1261,8 +1259,6 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
-allow 2a01:5e0:36:c311::1;
-allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1646,11 +1642,11 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
+allow 2a10:1fc0:10::e4c8:9020;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1853,7 +1849,6 @@ allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
 allow 5.255.121.71;
-allow 5.255.123.121;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
@@ -1902,7 +1897,6 @@ allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.246.98.159;
-allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
@@ -1973,6 +1967,7 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
+allow 91.227.77.119;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
@@ -1986,10 +1981,6 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
-allow 93.99.104.18;
-allow 93.99.104.194;
-allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
