--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -62,6 +62,7 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
+allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -215,7 +216,6 @@ allow 172.81.135.157;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
-allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -644,16 +644,11 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.218.118.133;
-allow 193.218.118.153;
-allow 193.218.118.157;
 allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
-allow 193.218.118.56;
-allow 193.218.118.72;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -823,7 +818,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
-allow 2001:9b0:25b:f700::913;
+allow 2001:9b0:25b:f700::20e;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -1269,7 +1264,6 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:c:b915::1;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1372,7 +1366,6 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
-allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1629,15 +1622,10 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:8605:d341:b954:fc51;
-allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
-allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
-allow 2a0f:e586:f:f:a060:ebda:49aa:b011;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1785,6 +1773,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1799,7 +1788,6 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
-allow 45.88.186.86;
 allow 45.9.148.50;
 allow 45.9.156.100;
 allow 45.9.156.101;
@@ -1911,7 +1899,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1973,6 +1960,7 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
